--- a/imgui.ini
+++ b/imgui.ini
@@ -51,5 +51,5 @@ DockSpace     ID=0xD8E29983 Window=0x4647B76E Pos=34,57 Size=1980,1080 Split=X
   DockNode    ID=0x00000003 Parent=0xD8E29983 SizeRef=1543,1080 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0xD8E29983 SizeRef=435,1080 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=35,1080 CentralNode=1
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=398,1080 Selected=0x54723243
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=398,1080 Selected=0xE192E354
 
