--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=1
 
 [Window][Settings]
-Pos=1582,0
-Size=398,1080
+Pos=1579,0
+Size=345,1055
 Collapsed=0
 DockId=0x00000002,1
 
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1980,1080
+Size=1924,1055
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -25,13 +25,13 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=0,0
-Size=1543,1080
+Size=1543,1055
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene]
-Pos=1582,0
-Size=398,1080
+Pos=1579,0
+Size=345,1055
 Collapsed=0
 DockId=0x00000002,0
 
@@ -47,9 +47,9 @@ Collapsed=0
 DockId=0x00000002,2
 
 [Docking][Data]
-DockSpace     ID=0xD8E29983 Window=0x4647B76E Pos=242,265 Size=1980,1080 Split=X
+DockSpace     ID=0xD8E29983 Window=0x4647B76E Pos=9,38 Size=1924,1055 Split=X
   DockNode    ID=0x00000003 Parent=0xD8E29983 SizeRef=1543,1080 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0xD8E29983 SizeRef=435,1080 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=35,1080 CentralNode=1
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=398,1080 Selected=0xE192E354
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=398,1080 Selected=0x54723243
 
